--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<p id="gfg"></p>
 	</center>
 	<div class="date-time">
+		<script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(545376, {whitelist: [], blacklist: [""]});</script>
 		<center>
 			<h3 class="heading">bomba:</h3>
 			<button type="button"
